# TheLoom

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE_NOTES.md  bench.mjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vite.runtime.config.ts  wrangler.toml
.claude/: launch.json
.github/workflows/: deploy.yml  release.yml  verify.yml
docs/: DEVELOPMENT.md  PRODUCT_OPTIMIZATION_ROADMAP.md  R10A_AI_ASSISTANT.md  R11W_WRITING_WORKBENCH.md
examples/engine-demo/: README.md  demo.mjs
examples/godot-demo/: README.md  export-sample.mjs  main.gd  main.tscn  project.godot  sample_package.json  theloom_runtime.gd
src/: App.tsx  advancedAudit.test.ts  advancedAudit.ts  assetFiles.test.ts  assetFiles.ts  audit.ts  batch.test.ts  batch.ts  diagnostics.test.ts  diagnostics.ts  dialog.test.ts  dialog.ts  documentOperations.test.ts  documentOperations.ts  documentReferences.test.ts  documentReferences.ts  documentStructure.test.ts  documentStructure.ts  export.ts  folderCache.ts  issues.test.ts  issues.ts  main.tsx  migration.test.ts  navigation.test.ts  planning.test.ts  planning.ts  playSaves.ts  proofreading.test.ts  proofreading.ts  query.test.ts  query.ts  recovery.test.ts  recovery.ts  regressionBaseline.test.ts  revision.test.ts  revision.ts  revisionWorkflow.test.ts  revisionWorkflow.ts  rng.test.ts  (+32 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ai/: analysis.ts  analysisAssistant.test.ts  analysisAssistant.ts  assistant.ts  (+25 more)
(+113 files in other folders)
