[package]
name = "theloom"
version = "0.22.0"
description = "叙事织机 TheLoom — 叙事设计工具"
edition = "2021"

[lib]
name = "theloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = true
strip = true
